--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -10,8 +10,24 @@
 .todo-create {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   width: 100%;
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
+}
+.todo-input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid lightgray;
+  outline: none;
+}
+.todo-create-btn {
+  margin-top: 10px;
+  padding: 3px 7px;
+  border: none;
+  border-radius: 5px;
+  background-color: goldenrod;
+  cursor: pointer;
+  font-weight: 700;
 }
