--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -17,17 +17,22 @@
 }
 .todo-input {
   width: 100%;
-  padding: 10px;
+  padding: 10px 0px;
   border: none;
   border-bottom: 1px solid lightgray;
   outline: none;
 }
 .todo-create-btn {
   margin-top: 10px;
-  padding: 3px 7px;
+  padding: 10px 0px;
   border: none;
   border-radius: 5px;
   background-color: goldenrod;
   cursor: pointer;
   font-weight: 700;
+}
+.todo-icons {
+  font-size: 25px;
+  margin-right: 7px;
+  cursor: pointer;
 }
